# glimmer

./: .gitignore  CMakeLists.txt  LICENSE  NOTES.md  README.md
docs/: demo.txt  minimal.txt  out.txt  simple.txt
examples/: CMakeLists.txt  demo.cpp  minimal.cpp  simple.cpp
include/chronos/: chronos.h  defines.h  dump.h  guard.h  profile.h  scope.h
include/glimmer/: collapse.h  defines.h  dump.h  frame.h  glimmer.h  guard.h  leftheavy.h  profile.h  scope.h  stackcollapse.h
src/: collapse.cpp  dump.cpp  frame.cpp  guard.cpp  profile.cpp  stackcollapse.cpp
